[gd_scene load_steps=3 format=3 uid="uid://kqjkbveh01nv"]

[ext_resource type="Script" uid="uid://bsu20brgwpydk" path="res://content/adjective/adjective.gd" id="1_gasdm"]
[ext_resource type="Theme" uid="uid://jtkek1w5hnou" path="res://main/theme.tres" id="2_i04lt"]

[node name="Adjective" type="HFlowContainer"]
offset_right = 360.0
offset_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
script = ExtResource("1_gasdm")

[node name="OQuesion" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "II. — Пост: "

[node name="Category" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "разряд?"
flat = true

[node name="Separator" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "; "

[node name="Separator2" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "непост: "

[node name="Form" type="Button" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "форма?"
flat = true

[node name="LilSep" type="Label" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_i04lt")
text = ", "

[node name="DoC" type="Button" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "степень сравнения?"
flat = true

[node name="LilSep2" type="Label" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_i04lt")
text = ", "

[node name="Case" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "падеж?"
flat = true

[node name="LilSep3" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = ", "

[node name="Number" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "число?"
flat = true

[node name="LilSep4" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = ", "

[node name="Gend" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_i04lt")
text = "род?"
flat = true

[connection signal="pressed" from="Category" to="." method="_on_category_pressed"]
[connection signal="pressed" from="Form" to="." method="_on_form_pressed"]
[connection signal="pressed" from="DoC" to="." method="_on_doc_pressed"]
[connection signal="pressed" from="Case" to="." method="_on_case_pressed"]
[connection signal="pressed" from="Number" to="." method="_on_number_pressed"]
[connection signal="pressed" from="Gend" to="." method="_on_gend_pressed"]
